--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "require": {
     "j4mie/idiorm": "^1.5",
-    "symfony/http-foundation": "^4.2"
+    "symfony/http-foundation": "^4.2",
+    "altorouter/altorouter": "^1.2"
   },
   "require-dev": {
     "symfony/var-dumper": "^4.2"
