--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
   "require": {
     "j4mie/idiorm": "^1.5",
     "symfony/http-foundation": "^4.2",
-    "altorouter/altorouter": "^1.2"
+    "altorouter/altorouter": "^1.2",
+    "twig/twig": "^2.0",
+    "tightenco/collect": "^5.7"
   },
   "require-dev": {
     "symfony/var-dumper": "^4.2"
